# rwm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  dist-workspace.toml  example.fig  example.toml  find_dummies.sh  pyproject.toml  rust-toolchain.toml  rustfmt.toml  wrapper.h
.github/: dependabot.yml  zizmor.yaml
.github/workflows/: build-binaries.yml  check.yml  ci.yaml  release.yml  test.yml  zizmor.yml
blocks/: Cargo.toml  README.md  build.rs
blocks/src/: config.rs  main.rs
dwm/: config.h  drw.c  drw.h  dwm.c  dwm.h
scripts/: gen_keyhandlers.sh  generate_button_handlers.sh  generate_handlers.sh  keys.sh  keysyms.py  make_tagkeys.awk  release.sh
src/: button_handlers.rs  config.lua  config.rs  config.rs.bak  core.rs  drw.rs  drw.rs.bak  enums.rs  events.rs  handlers.rs  handlers.rs.bak  key_handlers.rs  layouts.rs  lib.rs  main.rs  main_.rs  state.rs  tests.rs  util.rs  x.rs  xembed.rs
src/config/: env.rs  fig_env.rs  key.rs
src/snapshots/: rwm__config__tests__from_lua.snap
