[package]
name = "rwm"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["blocks"]

[dependencies]
x11 = { version = "2.21.0", features = ["xlib", "xft", "xinerama"] }
libc = "0.2.169"
yeslogic-fontconfig-sys = "6.0.0"
env_logger = "0.11.6"
log = "0.4.25"
mlua = { version = "0.10.2", features = ["lua54", "serialize"] }
serde = { version = "1.0.218", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
xcb = { version = "1.5.0", features = [ "res" ] }

[dev-dependencies]
insta = "1.41.1"
