[package]
name = "rwm"
version = "2.0.1"
edition = "2024"
rust-version = "1.92"
repository = "https://github.com/ntBre/rwm"

[workspace]
members = ["blocks"]

[dependencies]
x11 = { version = "2.21.0", features = ["xlib", "xft", "xinerama"] }
libc = "0.2.182"
yeslogic-fontconfig-sys = "6.0.0"
env_logger = "0.11.6"
log = "0.4.29"
mlua = { version = "0.11.6", features = ["lua54", "serialize"] }
serde = { version = "1.0.228", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
xcb = { version = "1.7.0", features = [ "res" ] }

[dev-dependencies]
insta = "1.41.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.dist]
dist = true
